--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "an intro socket io chat app",
   "dependencies": {
     "express": "^4.7.4",
+    "jade": "^1.5.0",
     "socket.io": "^1.0.6"
   }
 }
